src/test/deca/syntax/valid/New.deca
//Test new

class Thing {

    int i;
    
}
{
    Thing i = new Thing();

}

