src/test/deca/syntax/invalid/extension/missHook.deca
{
	int[][ tab x = new int[5][];

}